--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+DanseMacabre/Assets/Settings/ForwardRenderer.asset
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe3.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe6.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe7.log
