--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ ExportedObj/
 *.pdb
 *.opendb
 *.VC.db
+*.log
 
 # Unity3D generated meta files
 *.pidb.meta
@@ -44,3 +45,15 @@ DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe6.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe7.log
+*.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+*.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe7.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe6.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe3.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+DanseMacabre/Logs/AssetImportWorker0-prev.log
