--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ sysinfo.txt
 *.apk
 *.unitypackage
 DanseMacabre/Assets/Settings/ForwardRenderer.asset
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe3.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
