--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe2.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe3.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
+*.log
