--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe3.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
 *.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
