--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
 *.log
 DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
+*.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe4.log
+DanseMacabre/Logs/shadercompiler-UnityShaderCompiler.exe5.log
